--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "run local": "npx hardhat node",
+    "local": "npx hardhat node",
+    "compile": "npx hardhat compile",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
