Added new UI page and homepage

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,15 +12,16 @@
     "@alchemy/aa-accounts": "^3.12.0",
     "@alchemy/aa-alchemy": "^3.12.0",
     "@alchemy/aa-core": "^3.12.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.17",
+    "@mui/material": "^5.15.17",
     "@tanstack/react-query": "5.28.9",
-    "viem": "2.8.6",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@mui/material": "^5.11.11",
     "ethers": "^6.12.1",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "viem": "2.8.6"
   },
   "devDependencies": {
     "@types/node": "^20",
