--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "sass": "^1.77.1",
     "viem": "2.8.6"
   },
   "devDependencies": {
