--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "viem": "2.8.6"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
