--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,13 @@
     "@alchemy/aa-accounts": "^3.12.0",
     "@alchemy/aa-alchemy": "^3.12.0",
     "@alchemy/aa-core": "^3.12.0",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.11",
+    "@mui/x-date-pickers": "^7.4.0",
+    "@tanstack/react-query": "5.28.9",
+    "dayjs": "^1.11.11",
+    "eth-crypto": "^2.6.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.17",
@@ -24,6 +31,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
     "react-redux": "^9.1.2",
+    "viem": "2.8.6"
+    "react-dom": "^18",
     "viem": "2.8.6"
   },
   "devDependencies": {
