--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@alchemy/aa-core": "^3.12.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.11.11",
     "@mui/x-date-pickers": "^7.4.0",
     "@tanstack/react-query": "5.28.9",
@@ -26,17 +27,17 @@
     "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-query": "5.28.9",
     "ethers": "^6.12.1",
+    "jquery": "^3.7.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.4",
-    "react-redux": "^9.1.2",
     "viem": "2.8.6"
     "react-dom": "^18",
     "viem": "2.8.6"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@types/jquery": "^3.5.30",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
