--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,13 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.17",
+    "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-query": "5.28.9",
     "ethers": "^6.12.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.1.2",
     "viem": "2.8.6"
   },
   "devDependencies": {
