--- a/.github/workflows/main_eus-pawledger-backend.yml
+++ b/.github/workflows/main_eus-pawledger-backend.yml
@@ -1,17 +1,22 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - eus-pawledger-backend
+name: Build and Deploy Pawledger Backend
 
 on:
   push:
     branches:
       - main
+    paths:
+      - 'backend/**'
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: windows-latest
+    defaults:
+      run:
+        working-directory: ./backend/PawledgerAPI
 
     steps:
       - uses: actions/checkout@v4
