--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.4",
     "react-redux": "^9.1.2",
     "viem": "2.8.6"
   },
