--- a/backend/PawledgerAPI/appsettings.json
+++ b/backend/PawledgerAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PawLedgerDb": "Host=127.0.0.1;Port=5433;Database=PawledgerDb;Username=pawledgeruser;Password=pawledgerpassword"
+    "PawLedgerDb": "Server=pawledger-db.postgres.database.azure.com;Database=postgres;Port=5432;User Id=pawledger_db_root;Password=Pleasedontforgetthis123!;Ssl Mode=Require;"
   },
   "Logging": {
     "LogLevel": {
