--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,9 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "viem": "2.8.6"
+    "viem": "2.8.6",
+    "react-hook-form": "^7.51.4",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
