--- a/blockchain/packages/hardhat/package.json
+++ b/blockchain/packages/hardhat/package.json
@@ -6,7 +6,7 @@
     "account": "hardhat run scripts/listAccount.ts",
     "chain": "hardhat node --network hardhat --no-deploy",
     "compile": "hardhat compile",
-    "deploy": "hardhat deploy",
+    "deploy": "hardhat deploy --network polygonAmoy",
     "fork": "MAINNET_FORKING_ENABLED=true hardhat node --network hardhat --no-deploy",
     "generate": "hardhat run scripts/generateAccount.ts",
     "flatten": "hardhat flatten",
@@ -18,6 +18,7 @@
     "hardhat-verify": "hardhat verify"
   },
   "devDependencies": {
+    "@chainlink/env-enc": "^1.0.5",
     "@ethersproject/abi": "^5.7.0",
     "@ethersproject/providers": "^5.7.1",
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.3",
