--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-query": "5.28.9",
     "dayjs": "^1.11.11",
+    "eccrypto-js": "^5.4.0",
     "eth-crypto": "^2.6.0",
     "ethers": "^6.12.1",
     "jquery": "^3.7.1",
