Committing partial working publicKey registry

--- a/backend/PawledgerAPI/appsettings.json
+++ b/backend/PawledgerAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PawLedgerDb": "Server=pawledger-db.postgres.database.azure.com;Database=postgres;Port=5432;User Id=pawledger_db_root;Password=Pleasedontforgetthis123!;Ssl Mode=Require;"
+    "PawLedgerDb": "Server=pawledger-db.postgres.database.azure.com;Database=postgres;Port=5432;User Id=pawledger_db_root;Password=Pleasedontforgetthis123!;Ssl Mode=VerifyFull;"
   },
   "Logging": {
     "LogLevel": {
