--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
     "react-redux": "^9.1.2",
+    "uuid": "^9.0.1",
     "viem": "2.8.6"
   },
   "devDependencies": {
