--- a/.github/workflows/main_pawledger-ui.yml
+++ b/.github/workflows/main_pawledger-ui.yml
@@ -39,7 +39,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: node-app
-          path: .
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
