--- a/.github/workflows/main_pawledger-ui.yml
+++ b/.github/workflows/main_pawledger-ui.yml
@@ -43,7 +43,7 @@ jobs:
           if-bo-files-found: error
 
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     needs: build
     environment:
       name: 'Production'
