--- a/.github/workflows/main_pawledger-ui.yml
+++ b/.github/workflows/main_pawledger-ui.yml
@@ -33,7 +33,7 @@ jobs:
           npm run test --if-present
           
       - name: Zip artifact for deployment
-        run: Compress-Archive * build-bundle.zip
+        run: Compress-Archive .next build-bundle.zip
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
