--- a/.github/workflows/main_pawledger-ui.yml
+++ b/.github/workflows/main_pawledger-ui.yml
@@ -56,6 +56,9 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: node-app
+          
+      - name: Unzip artifact for deployment
+        run: Expand-Archive build-bundle.zip -DestinationPath .
       
       - name: Login to Azure
         uses: azure/login@v1
