--- a/.github/workflows/main_pawledger-ui.yml
+++ b/.github/workflows/main_pawledger-ui.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - pawledger-ui
+name: Build and Deploy Pawledger UI
 
 on:
   push:
@@ -31,6 +31,7 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
+          rm -rf node_modules
           
       - name: Zip artifact for deployment
         run: Compress-Archive * build-bundle.zip
