--- a/.github/workflows/main_pawledger-ui.yml
+++ b/.github/workflows/main_pawledger-ui.yml
@@ -31,7 +31,7 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
-          rm -rf node_modules
+          Remove-Item -Recurse -Force node_modules
           
       - name: Zip artifact for deployment
         run: Compress-Archive * build-bundle.zip
