--- a/backend/PawledgerAPI/Properties/launchSettings.json
+++ b/backend/PawledgerAPI/Properties/launchSettings.json
@@ -6,7 +6,8 @@
       "launchBrowser": false,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "PET_ADDRESS": "0x3b2a767c3f8fC0a51C32AEF5cCbd33db9929bBa7"
       }
     }
   }
