--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,5 +45,8 @@
     "eslint-config-next": "14.2.3",
     "typescript": "^5"
   },
+  "engines": {
+   "node": ">=20.0.0"
+  }
   "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
