copy with linux commands.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build-contract": "cd ../blockchain/packages/hardhat/ && npm install && npm run compile && xcopy artifacts\\contracts\\  ..\\..\\..\\frontend\\generated\\contracts\\ /s /y && xcopy deployments\\  ..\\..\\..\\frontend\\generated\\deployments\\ /s /y",
+    "build-contract": "cd ../blockchain/packages/hardhat/ && npm install && npm run compile && cp -r artifacts/contracts/ ../../../frontend/generated/contracts/ && cp -r deployments/ ../../../frontend/generated/deployments/",
     "dev": "npm run build-contract && next dev",
     "build": "npm run build-contract && next build",
     "start": "next start",
